# rotten_tomatoes

./: .gitattributes  .gitignore  LICENSE  Makefile  config.py  log  log2  pyproject.toml
classification/config/: schemas.py  utils.py
classification/config/models/: BaselineBERT_FrozenWeights_SimpleHead.yaml  FrozenBERTWithDeeperHead.yaml  UnfrozenBERT.yaml  UnfrozenBERTAugmentedDatasetWithScrapedData.yaml  UnfrozenBERTAugmentedDomainAdaptation.yaml
classification/config/sweeps/: sweep_bert_logreg_baseline.yaml
classification/data/: data_loader.py  w.ipynb
classification/models/classifiers/: base_classes.py  baselines.py  (+2 more)
classification/training/: run_experiment.py  utils.py
classification/utils/: factories.py  wandb.py
configs/models/: BERTForMaskedLM.yaml  BaselineBERTLogisticRegressionModel copy.yaml  BaselineBERTLogisticRegressionModel.yaml  BaselineBERTLogisticRegressionModel_AdamW.yaml  FrozenBERTWithDeeperHead.yaml  MaskedLMForDomainAdaptation.yaml  UnfreezedBaselineBERTLogisticRegressionModel_Adam.yaml  UnfrozenBERT.yaml  UnfrozenBERTAugmentedDatasetWithScrapedData.yaml  UnfrozenBERTAugmentedDomainAdaptation.yaml
configs/sweeps/: sweep_AugmentedDomainAdaptation.yaml  sweep_bert_logreg_baseline.yaml  sweep_bert_logreg_baselineAdamW.yaml  sweep_bert_logreg_baseline_RMSprop.yaml  sweep_initial_DeeperFrozenBERT.yaml
masked_lm/config/: schemas.py  utils.py
masked_lm/data/: data_loader.py
masked_lm/models/: architectures.py  lightning_wrapper.py  torch_model.py
masked_lm/training/: run_experiment.py  utils.py
masked_lm/utils/: factories.py
rt_scraper/: logger.py  postprocessing.py  scraper.py  scraper_utils.py
src/config/: schemas.py  utils.py
src/data/: data_loader.py
src/models/: baselines.py  deeper_frozen_bert.py  lightning.py  lightning_wrappers.py  metrics.py
src/training/: run_experiment.py  utils.py
src/utils/: factories.py  wandb.py
tasks/: sweep.sh
training/: 01_baseline_models.ipynb  callbacks.py  cli_parser.py  run_experiment.py
utils/: wandb.py
workbooks/: 00_human_level_classification.ipynb  01_data_exploration.ipynb  02_baseline_models.ipynb  human_eval_checkpoint  models_evaluation.ipynb  wb_utils.py
(+29 files in other folders)
